--- a/doc/dissertation/content/newcommands.tex
+++ b/doc/dissertation/content/newcommands.tex
@@ -222,9 +222,9 @@
 \newcommand{\DMPupperboundtheta}{\solutionbound^{\textup{DMP},\textup{theta},+}}
 \newcommand{\DMPboundstheta}{\solutionbound^{\textup{DMP},\textup{theta},\pm}}
 \newcommand{\DMPbounds}{\solutionbound^{\textup{DMP},\pm}}
-\newcommand{\analyticDMPbounds}{\solutionbound^{\text{analytic},\pm}}
-\newcommand{\analyticDMPupperbound}{\solutionbound^{\text{analytic},+}}
-\newcommand{\analyticDMPlowerbound}{\solutionbound^{\text{analytic},-}}
+\newcommand{\analyticDMPbounds}{\solutionbound^{\textup{analytic},\pm}}
+\newcommand{\analyticDMPupperbound}{\solutionbound^{\textup{analytic},+}}
+\newcommand{\analyticDMPlowerbound}{\solutionbound^{\textup{analytic},-}}
 \newcommand{\limitedfluxbound}{Q}
 \newcommand{\antidiffusionbound}{\limitedfluxbound}
 \newcommand{\antidiffusionboundvector}{\mathbf{\limitedfluxbound}}
